what we do desktop p tag css spill fixed

--- a/themes/mountain_health/style.css
+++ b/themes/mountain_health/style.css
@@ -2753,7 +2753,7 @@ object {
 @media (min-width: 480px) {
   .what-is-naturopathic-medicine p {
     font-size: 22px;
-    width: 729px;
+    width: 700px;
     text-align: left; } }
 
 @media (min-width: 480px) {
